# minoka_apps

./: .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt  sql.db
backend/api/v1/: db.py  db_append.py  dmm_api.py  feature_extraction.py  gals_db.csv  main.py
frontend/: .env  Dockerfile  package-lock.json  package.json
frontend/src/: App.js  sample.js
frontend/src/api/: ApiSample.js  PostSample.js  RepApi.js  ReportPostApi.js  SerchSample.js  api.js  firebase.js
frontend/src/components/: Header.js
frontend/src/components/Pages/: Girls.js  Login.js  Recommend.js  Report.js  ReviewPage.js  TopPage.css  TopPage.js
